--- a/Public/index.html
+++ b/Public/index.html
@@ -198,7 +198,7 @@
 														<span><a href="#">Compare Product</a></span>
 														<span><a href="#">My Account</a></span>
 														<span><a href="#">My Wishlist</a></span>
-														<span><a href="#">Sign In</a></span>
+														<span><a href="../Public/pages/login.html">Sign In</a></span>
 														<span><a href="#">Create An Account</a></span>
 													</div>
 												</div>
