--- a/Public/pages/shop-list.html
+++ b/Public/pages/shop-list.html
@@ -199,7 +199,7 @@
 														<span><a href="#">Compare Product</a></span>
 														<span><a href="#">My Account</a></span>
 														<span><a href="#">My Wishlist</a></span>
-														<span><a href="#">Sign In</a></span>
+														<span><a href="../pages/login.html">Sign In</a></span>
 														<span><a href="#">Create An Account</a></span>
 													</div>
 												</div>
