--- a/Public/pages/single-product.html
+++ b/Public/pages/single-product.html
@@ -200,7 +200,7 @@
 														<span><a href="#">Compare Product</a></span>
 														<span><a href="#">My Account</a></span>
 														<span><a href="#">My Wishlist</a></span>
-														<span><a href="#">Sign In</a></span>
+														<span><a href="../pages/login.html">Sign In</a></span>
 														<span><a href="#">Create An Account</a></span>
 													</div>
 												</div>
@@ -278,14 +278,14 @@
         						<div class="col-lg-6 col-12">
         							<div class="wn__fotorama__wrapper">
 	        							<div class="fotorama wn__fotorama__action" data-nav="thumbs">
-		        							  <a href="../1.html"><img src="../images/product/1.jpg" alt=""></a>
-		        							  <a href="../2.jpg"><img src="../images/product/2.jpg" alt=""></a>
-		        							  <a href="../3.jpg"><img src="../images/product/3.jpg" alt=""></a>
-		        							  <a href="../4.jpg"><img src="../images/product/4.jpg" alt=""></a>
-		        							  <a href="../5.jpg"><img src="../images/product/5.jpg" alt=""></a>
-		        							  <a href="../6.jpg"><img src="../images/product/6.jpg" alt=""></a>
-		        							  <a href="../7.jpg"><img src="../images/product/7.jpg" alt=""></a>
-		        							  <a href="../8.jpg"><img src="../images/product/8.jpg" alt=""></a>
+		        							  <a href="../images/1.html"><img src="../images/product/1.jpg" alt=""></a>
+		        							  <a href="../images/2.jpg"><img src="../images/product/2.jpg" alt=""></a>
+		        							  <a href="../images/3.jpg"><img src="../images/product/3.jpg" alt=""></a>
+		        							  <a href="../images/4.jpg"><img src="../images/product/4.jpg" alt=""></a>
+		        							  <a href="../images/5.jpg"><img src="../images/product/5.jpg" alt=""></a>
+		        							  <a href="../images/6.jpg"><img src="../images/product/6.jpg" alt=""></a>
+		        							  <a href="../images/7.jpg"><img src="../images/product/7.jpg" alt=""></a>
+		        							  <a href="../images/8.jpg"><img src="../images/product/8.jpg" alt=""></a>
 	        							</div>
         							</div>
         						</div>
